--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,106 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding-top: 10px; margin: 0;
+	font: 16px "Dosis", Helvetica, Arial, sans-serif;
+	font-weight: 500;
 }
-
 a {
-  color: #00B7FF;
+	color: #0397D1;
+ 	font-weight: 500;
 }
+a:hover {
+	color: #286666;
+}
+a.active {
+	color: #286666;
+	font-weight: 600;
+}
+#header {
+	padding-left: 10px;
+	width: 950px; margin: auto;
+	position: relative;
+	height: 142px;
+	background-color: #f5f6fc;
+}
+#body {
+	width: 960px; margin: auto;
+	position: relative;
+}
+.cool {
+	margin: 0; font-size: 46px; color: #286666; font-weight: 600;
+}
+#menu {
+	font-size: 20px;
+	padding-top: 14px;
+	float: left;
+}
+#menu .button {
+	padding: 15px;
+	float: left;
+}
+#menu .button { padding-left: 0; }
+#menu-right {
+	font-size: 20px;
+	padding-top: 14px;
+	float: right;
+}
+#menu-right .button {
+	padding: 15px;
+	float: left;
+}
+#menu-right .button { padding-right: 0; }
+.clear { clear: both; }
+#rightbox-loggedout {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	height: 122px;
+	width: 160px;
+	background-color: #91B9B7;
+	border-radius: 3px;
+	padding: 10px;
+}
+#rightbox-loggedout input, .trollboxinput {
+	width: 140px;
+	border: 1px solid #666;
+	font-family: 'Dosis';
+	padding: 5px;
+	font-size: 14px;
+	background-color: white;
+	background-color: rgba(255, 255, 255, 0.95);
+	letter-spacing: 1px;
+	margin-top: 3px;
+}
+#rightbox-loggedout button {
+	width: 140px;
+	border: 1px solid #666;
+	font-family: 'Dosis';
+	padding: 5px;
+	font-size: 16px;
+	background-color: white;
+	background-color: rgba(255, 255, 255, 0.95);
+	letter-spacing: 1px;
+	font-weight: 600px;
+	cursor: pointer;
+	margin-top: 3px;
+}
+#rightbox-loggedout input:focus, #rightbox-loggedout button:focus {
+	outline: none; border-color: #444; background-color: rgba(255, 255, 255, 1);
+}
+.trollboxinput {
+	width: 100%;
+	border-color: #bbb;
+}
+.trollboxinput:focus {
+	border-color: #999;
+}
+.boxx { background-color: #f9f9f9 !important; padding: 20px; border-radius: 2px; }
+.boxx form input { margin-top: 5px; }
+.label { font-size: 14px; }
+
+.tbl {
+	border-collapse: collapse;
+}
+.tbl td, .tbl th {
+	border: 1px solid #ccc;
+}
+a:hover {text-decoration: none;}
