--- a/views/wallet-ajax.jade
+++ b/views/wallet-ajax.jade
@@ -36,3 +36,5 @@ table(width='100%',cellspacing='0',cellpadding='5').tbl
           input(name='address', type='text', placeholder=coin.name + ' address').form-control
           input(name='submit', type='submit', value='Process withdrawal').form-control.btn.btn-primary
         div(style='height: 5px;')
+br
+span(style='font-weight: 300; font-size: 14px;') This table is refreshed every 15 seconds, unless you click Withdraw.
